		Fixed lharc archives return code to LHA.
		Changed mkprod.awk script to support Debian Woody.
		The aka2str function now onmits the @ if there is no domain
		information.

	clcomm.a
		Added counter for mailer TCP/IP sessions.

	diesel.a
		New library for parsing macro templates.

	msgbase.a:
		Improved logging for opening message bases.
		Added function to delete a JAM message base.

	mbsetup:
		In message groups added default settings for auto area
		creation.
		Added servicename filemgr to the filemgr services.
		When adding or deleting a message area, several extra checks
		are done. The JAM base is also removed when deleting.
		Layout for message area editor changed, more logical now.
		If selecting a file/mailgroup in node edit that is outside the
		visible range of groups, the view is adjusted.
		If changing the path in an existing file area, the files in
		that area are moved to the new path.
		It is now possible to move file areas.
		It is now possible to move JAM message bases.
		Added edit of external message editor in menu 1.4.
		Added edit of NoPrompt setting in menus for doors.
		Changed edit of message editor in user editor.
		Double noderecords are automatic removed with error logging.
		Corrected screen layout in menu 1.4.11.
		When editing analogue modem lines, the locked portspeed was
		in a lot of cases set to 0.
		In newfiles and filefind reports sets default template files
		during init.
		When adding a new newfiles or filefind record some defaults
		are automatic filled in.
		Splitted no TCP into no IBN, no IFC and no ITN in global and
		nodes setup.
		When editing a new message area, and the area was made active,
		all entered data was erased.
		Removed setting for http setup which are now in the macro
		templates.
		Changed the screen layout of menu 10.2 a bit as suggested by
		Vince Coen.
		Fixed a non understandable logmessage in check if nodes are
		connected to file and or mail groups.