@@ -4631,6 +4631,7 @@ v0.33.20        10-Feb-2002
 	msgbase.a:
 		Improved logging for opening message bases.
 		Added function to delete a JAM message base.
+		Fix for corrupting LastRead pointers on FreeBSD systems.
 
 	mbsetup:
 		In message groups added default settings for auto area
